Remove OpenJDK 21 functionality